public static class DialogParameters  {

    //Dialog Controller Parameters
    public static string nextString = "next";
    public static string answer0String = "answer0";
    public static string answer1String = "answer1";
    public static string answer2String = "answer2";
    public static string answer3String = "answer3";
    public static string itemConditionMetString = "itemConditionMet";
    public static string itemConditionNotMetString = "itemConditionNotMet";
    public static string valueConditionMetString = "valueConditionMet";
    public static string valueConditionNotMetString = "valueConditionNotMet";
    public static string visitedString = "visited";
    public static string activeString = "active";

}
